# dipole-simulation

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html
src/: canvas.rs  controls.rs  generate_sphere.rs  lib.rs  main.rs  webgl_object.rs
src/app/assets/: mod.rs
src/app/store/: camera.rs  mod.rs
src/render/: mod.rs  render_meshes.rs  texture_unit.rs
src/render/mesh/: flat.rs  lines.rs  mesh.rs  mod.rs  points.rs
src/render/styles/: flat.rs  mod.rs  points.rs  textured.rs
src/shader/: flat-vertex.glsl  line-vertex.glsl  mod.rs
src/simulation/: dipole.rs  mod.rs
